--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <br>Rajendra Prasad Path, opp to Indore Stadium,Katihar, Bihar 854105<br>
                     <br>
                     <br><strong>Contacts</strong>
-                    <br><br>Phone: +91-9122118231<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; +91-9973420458</p>
+                    <br><br>Phone: +91-9122118231<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <p class="mbr-text">&nbsp;<br>
